RESOLVED FIXED200239
Contextual menu does not present when holding an embedded photo but works with link and attachments
https://bugs.webkit.org/show_bug.cgi?id=200239
Summary Contextual menu does not present when holding an embedded photo but works wit...
Dean Jackson
Reported 2019-07-29 13:51:11 PDT
Contextual menu does not present when holding an embedded photo but works with link and attachments
Attachments
Patch (3.50 KB, patch)
2019-07-29 13:55 PDT, Dean Jackson
thorton: review+
Dean Jackson
Comment 1 2019-07-29 13:51:44 PDT
Dean Jackson
Comment 2 2019-07-29 13:55:03 PDT
Tim Horton
Comment 3 2019-07-29 13:56:42 PDT
Comment on attachment 375096 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=375096&action=review > Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:7971 > + UIContextMenuActionProvider actionMenuProvider = [weakSelf = weakSelf, elementInfo = elementInfo] (NSArray<UIMenuElement *> *) -> UIMenu * { why the [a = a, b = b]? can't you just [a, b]?
Tim Horton
Comment 4 2019-07-29 13:56:55 PDT
Comment on attachment 375096 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=375096&action=review > Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:7978 > + return [UIMenu menuWithTitle:@"" children:actions]; Is this not nullable?
Dean Jackson
Comment 5 2019-07-29 14:16:27 PDT
Comment on attachment 375096 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=375096&action=review >> Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:7971 >> + UIContextMenuActionProvider actionMenuProvider = [weakSelf = weakSelf, elementInfo = elementInfo] (NSArray<UIMenuElement *> *) -> UIMenu * { > > why the [a = a, b = b]? can't you just [a, b]? yes >> Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:7978 >> + return [UIMenu menuWithTitle:@"" children:actions]; > > Is this not nullable? Alas, no. Very strange since they don't really want titles.
Dean Jackson
Comment 6 2019-07-29 14:20:46 PDT
Note You need to log in before you can comment on or make changes to this bug.